# ocaml-game

./: .gitignore  LICENSE  README.md  dune-project  game.opam  ideas.txt
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: game.cma  game.cmxa  game.cmxs
_build/default/lib/.game.objs/byte/: game.cmi  game.cmo  game.cmt
_build/default/lib/.game.objs/native/: game.cmx
_build/default/lib/.merlin-conf/: lib-game
_build/default/test/.game.eobjs/byte/: dune__exe__Game.cmi  dune__exe__Game.cmti
_build/default/test/.game.eobjs/native/: dune__exe__Game.cmx
_build/default/test/.merlin-conf/: exe-game
public/: persona-back.ase  persona.ase
